--- a/PRO-1.HTML
+++ b/PRO-1.HTML
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    this is my new project(version-1)
+    this is my new project(version-1) <br>
+    This is updated version(version-2) <br>
 </body>
 </html>
